Fix: .dropdown, .dropup z-index issue

--- a/src/app/admin-files-chart/admin-files-chart.component.scss
+++ b/src/app/admin-files-chart/admin-files-chart.component.scss
@@ -57,3 +57,7 @@
         }
     }
 }
+/* .dropdown, .dropup z-index 出奇的高 */
+:host ::ng-deep .dropdown, :host ::ng-deep .dropup {
+    z-index: 0;
+}
